tests/negative/neg_pr116_legacy_end_if.safe
package neg_pr116_legacy_end_if

   function broken returns integer

      if true
         return 1

      end if
